[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xlum-python"
version = "0.0.1"
authors = [
  { name="Grehl, Steve", email="research@steve-grehl.eu" },
]
description = "python importer for the XLUM data exchange and archive format"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/SteveGrehl/xlum-python"
"Bug Tracker" = "https://github.com/SteveGrehl/xlum-python/issues"