# see: https://godatadriven.com/blog/a-practical-guide-to-setuptools-and-pyproject-toml/
# This is where all the configuration details of your package goes.
[metadata]
name = xlum
version = attr: xlum.__version__
author = Steve Grehl
author_email = research@steve-grehl.eu
url = https://github.com/SteveGrehl/xlum-python
description = python importer for the XLUM data exchange and archive format
long_description = file: docs/PIP_README.md
long_description_content_type = text/markdown
keywords = xlum, luminescence
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    lxml
    pandas
    urllib3
    openpyxl
package_dir=
    =src

[options.packages.find]
where=src

[options.package_data]
* = docs/*, README.md

[options.extras_require]
notebook = 
    jupyter
    notebook
    ipykernel
    matplotlib
test = 
    pytest
    urllib